added links to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Welcome to the Weather App</h1>
-    <footer>Built by Lore</footer>
+    <footer>Built by 
+        <a href="https://github.com/Lorevdh" target="_blank">Lore</a> code hosted 
+        <a href="https://github.com/Lorevdh/Weather" target="_blank">on Github</a> and website hosted
+        <a href="https://weather-app-lore.netlify.app/" target="_blank">on Netlify</a>
+        </footer>
 </body>
 </html>
