--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Welcome to the Weather App</h1>
     <footer>Built by 
-        <a href="https://github.com/Lorevdh" target="_blank">Lore</a> code hosted 
-        <a href="https://github.com/Lorevdh/Weather" target="_blank">on Github</a> and website hosted
-        <a href="https://weather-app-lore.netlify.app/" target="_blank">on Netlify</a>
+        <a href="https://github.com/Lorevdh" target="_blank">Lore</a> 
+        <a href="https://github.com/Lorevdh/Weather" target="_blank">open-sourced on Github</a> and 
+        <a href="https://weather-app-lore.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
 </body>
 </html>
