--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Welcome to the Weather App</h1>
+    <header>
+       <form>
+        <input type="search" placeholder="Enter a city..." required/>
+        <input type="submit" value="search" />
+
+       </form> 
+    </header>
+    <main>    
+      <div>
+        <h1>City</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
+
     <footer>Built by 
-        <a href="https://github.com/Lorevdh" target="_blank">Lore</a> 
+        <a href="https://github.com/Lorevdh" target="_blank">Lore</a> is
         <a href="https://github.com/Lorevdh/Weather" target="_blank">open-sourced on Github</a> and 
         <a href="https://weather-app-lore.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
