--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="weather-app">
     <header>
-       <form class="search-form">
-        <input type="search" placeholder="Enter a city..." required class="search-form-input"/>
+       <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a city..." required id="search-form-input" class="search-form-input"/>
         <input type="submit" value="search"  class="search-form-button"/>
 
        </form> 
@@ -23,7 +23,7 @@
      <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
@@ -44,5 +44,6 @@
         <a href="https://weather-app-lore.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
      </div>
+     <script src="src/app.js"></script>
 </body>
 </html>
